updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a financial analyst transitioning into technology world as a software engineer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Batoufam, Cameroon</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are computer, playing volleyball, singing gospel, video game, and travel.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Houston, TX.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have been passionate about technology for while.</p>
     </section>
 
     <footer id="footer">
